# Hotel-System-Project

./: .gitignore  Akram.c  Akram.h  Amle.c  Amle.h  CMakeLists.txt  Hany.c  Hany.h  Menna.c  Menna.h  README.md  Rabie.c  Rabie.h  main.c  rooms.txt  users.txt
src/: AdditionalMenus.c  AdditionalMenus.h  CheckInOut.c  CheckInOut.h  DataValidation.c  DataValidation.h  DateProcessing.c  DateProcessing.h  FileIO.c  FileIO.h  Includes.h  Query.c  Query.h  ReservationProcessMenus.c  ReservationProcessMenus.h  Structures.h  Utility.c  Utility.h  main.c
